src/dapp.java
/* Generated By:JavaCC: Do not edit this line. dapp.java */
import java.io.*;

public class dapp implements dappConstants {
  static int depth = 0;
  public static String indentation()
  {
     String temp = "";
       for(int i = 0; i<depth; i++)
       {
             temp += "\u005ct";
       }
       return temp;
  }
  static String resultStr = "";
  public static void main(String args []) throws ParseException
  {
    dapp parser = new dapp(System.in);
    System.out.println("\uac11\ub2c8\ub2e4\uc694 : ");
     try {
      parser.one_line();
      System.out.println("OK.");
    } catch(ParseException e) {
      System.out.println("NOK.");
      e.printStackTrace();
    }

    try {
      FileWriter fw = new FileWriter("output.txt");
      BufferedWriter bw = new BufferedWriter(fw);
      bw.write(resultStr);
      bw.close();
    } catch(Exception e) {
       e.printStackTrace();
     }
  }

  static final public void one_line() throws ParseException {
    label_1:
    while (true) {
      if (jj_2_1(2)) {
        ;
      } else {
        break label_1;
      }
      preprocessor();
    }
    global();
  }

  static final public void preprocessor() throws ParseException {
                     Token t;
    if (jj_2_6(2)) {
      jj_consume_token(63);
      t = jj_consume_token(NAME);
      jj_consume_token(63);
      if (jj_2_2(2)) {
        jj_consume_token(7);
      } else if (jj_2_3(2)) {
        jj_consume_token(8);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(11);
                                           resultStr += "#include " + "\u005c"" + KoreanRomanizer.romanize(t.toString()) + "\u005c"" + "\u005cn";
    } else if (jj_2_7(2)) {
      jj_consume_token(LESS);
      t = jj_consume_token(NAME);
      jj_consume_token(GREATER);
      if (jj_2_4(2)) {
        jj_consume_token(7);
      } else if (jj_2_5(2)) {
        jj_consume_token(8);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(11);
                                           resultStr += "#include <" + KoreanRomanizer.romanize(t.toString()) + ">" + "\u005cn";
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void global() throws ParseException {
    label_2:
    while (true) {
      if (jj_2_8(2)) {
        ;
      } else {
        break label_2;
      }
      if (jj_2_9(2)) {
        variable_declaration();
      } else if (jj_2_10(2)) {
        function_declaration();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    start();
    label_3:
    while (true) {
      if (jj_2_11(2)) {
        ;
      } else {
        break label_3;
      }
      if (jj_2_12(2)) {
        variable_declaration();
      } else if (jj_2_13(2)) {
        function_declaration();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    jj_consume_token(12);
  }

  static final public void variable_declaration() throws ParseException {
 Token a; Token b = null;
    data_type();
    jj_consume_token(64);
    a = jj_consume_token(NAME);
    jj_consume_token(64);
                                     resultStr += KoreanRomanizer.romanize(a.toString());
    if (jj_2_16(2)) {
      if (jj_2_14(2)) {
        jj_consume_token(7);
      } else if (jj_2_15(2)) {
        jj_consume_token(8);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } else {
      ;
    }
    if (jj_2_19(2)) {
      if (jj_2_17(2)) {
        jj_consume_token(64);
        b = jj_consume_token(NAME);
                       resultStr += " = " + KoreanRomanizer.romanize(b.toString());
        jj_consume_token(64);
        jj_consume_token(9);
      } else if (jj_2_18(2)) {
        jj_consume_token(10);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } else {
      ;
    }
    jj_consume_token(19);
    jj_consume_token(DOT);
               resultStr += ";" ;
  }

  static final public void function_declaration() throws ParseException {
    data_type();
    jj_consume_token(NAME);
    jj_consume_token(L_PAREN);
    if (jj_2_20(2)) {
      data_type();
      jj_consume_token(NAME);
    } else {
      ;
    }
    label_4:
    while (true) {
      if (jj_2_21(2)) {
        ;
      } else {
        break label_4;
      }
      jj_consume_token(COMMA);
      data_type();
      jj_consume_token(NAME);
    }
    jj_consume_token(R_PAREN);
    sentences();
  }

  static final public void data_type() throws ParseException {
    if (jj_2_22(2)) {
      jj_consume_token(13);
            resultStr += "int ";
    } else if (jj_2_23(2)) {
      jj_consume_token(14);
               resultStr += "double ";
    } else if (jj_2_24(2)) {
      jj_consume_token(15);
              resultStr += "void ";
    } else if (jj_2_25(2)) {
      jj_consume_token(16);
               resultStr += "bool ";
    } else if (jj_2_26(2)) {
      jj_consume_token(17);
               resultStr += "char ";
    } else if (jj_2_27(2)) {
      jj_consume_token(18);
               resultStr += "string ";
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void start() throws ParseException {
    jj_consume_token(6);
    jj_consume_token(L_BRACE);
             resultStr += "int main()" + indentation(); resultStr += "{\u005cn"; depth++;
    sentences();
                resultStr +=  "\u005cn" + indentation() + "return 0;\u005cn";
    jj_consume_token(R_BRACE);
         depth--; resultStr += indentation(); resultStr += "}\u005cn";
  }

  static final public void if_statement() throws ParseException {
    jj_consume_token(20);
    jj_consume_token(L_PAREN);
                 resultStr += "if (";
    logical_statement();
    jj_consume_token(R_PAREN);
    jj_consume_token(21);
                                     resultStr += ")\u005cn";
    sentences();
    label_5:
    while (true) {
      if (jj_2_28(2)) {
        ;
      } else {
        break label_5;
      }
      jj_consume_token(22);
      jj_consume_token(L_PAREN);
                    resultStr += " else if (";
      logical_statement();
      jj_consume_token(R_PAREN);
      jj_consume_token(21);
                                       resultStr += ")";
      sentences();
    }
    if (jj_2_29(2)) {
      jj_consume_token(23);
                resultStr += " else";
      sentences();
    } else {
      ;
    }
  }

  static final public void while_statement() throws ParseException {
    jj_consume_token(24);
    jj_consume_token(L_PAREN);
           resultStr += "while (";
    logical_statement();
    jj_consume_token(R_PAREN);
    jj_consume_token(25);
                                                                  resultStr += ")\u005cn";
    sentences();
    jj_consume_token(26);
    jj_consume_token(NOT);
  }

  static final public void logical_statement() throws ParseException {
 Token a; Token b;
    a = jj_consume_token(NAME);
                resultStr += KoreanRomanizer.romanize(a.toString());
    logical_operator();
    b = jj_consume_token(NAME);
                                                                                                       resultStr += KoreanRomanizer.romanize(b.toString());
  }

  static final public void logical_operator() throws ParseException {
    if (jj_2_30(2)) {
      jj_consume_token(ASSIGN);
          resultStr += "==";
    } else if (jj_2_31(2)) {
      jj_consume_token(LESS);
                                    resultStr += "<";
    } else if (jj_2_32(2)) {
      jj_consume_token(GREATER);
                                                             resultStr += ">";
    } else if (jj_2_33(2)) {
      jj_consume_token(LESS_EQUAL);
                                                                                       resultStr += "<=";
    } else if (jj_2_34(2)) {
      jj_consume_token(GREATER_EQUAL);
                                                                                                                   resultStr += ">=";
    } else if (jj_2_35(2)) {
      jj_consume_token(NOT_EQUAL);
                                                                                                                                              resultStr += "!=";
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void binary_operator() throws ParseException {
    if (jj_2_36(2)) {
      jj_consume_token(PLUS);
          resultStr += "+";
    } else if (jj_2_37(2)) {
      jj_consume_token(MULT);
                                   resultStr += "*";
    } else if (jj_2_38(2)) {
      jj_consume_token(MINUS);
                                                            resultStr += "-";
    } else if (jj_2_39(2)) {
      jj_consume_token(DIV);
                                                                                     resultStr += "/";
    } else if (jj_2_40(2)) {
      jj_consume_token(65);
                                                                                                              resultStr += "%";
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void sentences() throws ParseException {
    if (jj_2_42(2)) {
      jj_consume_token(L_BRACE);
          resultStr += indentation(); resultStr += "{\u005cn"; depth++;
      sentences();
      jj_consume_token(R_BRACE);
                                                                                         depth--; resultStr += indentation(); resultStr += "}\u005cn";
    } else {
      label_6:
      while (true) {
        if (jj_2_41(2)) {
          ;
        } else {
          break label_6;
        }
        sentence();
      }
                    resultStr += indentation() + "\u005cn";
    }
  }

  static final public void sentence() throws ParseException {
    resultStr += indentation();
    if (jj_2_43(2)) {
      variable_declaration();
    } else if (jj_2_44(2)) {
      logical_statement();
    } else if (jj_2_45(2)) {
      if_statement();
    } else if (jj_2_46(2)) {
      while_statement();
    } else if (jj_2_47(2)) {
      input_statement();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void input_statement() throws ParseException {
Token a;
Token b;
    a = jj_consume_token(NAME);
    jj_consume_token(28);
    b = jj_consume_token(NAME);
    if (jj_2_48(2)) {
      jj_consume_token(7);
    } else if (jj_2_49(2)) {
      jj_consume_token(8);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(29);
    jj_consume_token(DOT);
   resultStr += KoreanRomanizer.romanize(a.toString()) + " = " + KoreanRomanizer.romanize(b.toString()) + ";";
  }

  static private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  static private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  static private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  static private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  static private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  static private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  static private boolean jj_2_8(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  static private boolean jj_2_9(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_9(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  static private boolean jj_2_10(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_10(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  static private boolean jj_2_11(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_11(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  static private boolean jj_2_12(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_12(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(11, xla); }
  }

  static private boolean jj_2_13(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_13(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(12, xla); }
  }

  static private boolean jj_2_14(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_14(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(13, xla); }
  }

  static private boolean jj_2_15(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_15(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(14, xla); }
  }

  static private boolean jj_2_16(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_16(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(15, xla); }
  }

  static private boolean jj_2_17(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_17(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(16, xla); }
  }

  static private boolean jj_2_18(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_18(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(17, xla); }
  }

  static private boolean jj_2_19(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_19(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(18, xla); }
  }

  static private boolean jj_2_20(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_20(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(19, xla); }
  }

  static private boolean jj_2_21(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_21(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(20, xla); }
  }

  static private boolean jj_2_22(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_22(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(21, xla); }
  }

  static private boolean jj_2_23(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_23(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(22, xla); }
  }

  static private boolean jj_2_24(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_24(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(23, xla); }
  }

  static private boolean jj_2_25(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_25(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(24, xla); }
  }

  static private boolean jj_2_26(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_26(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(25, xla); }
  }

  static private boolean jj_2_27(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_27(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(26, xla); }
  }

  static private boolean jj_2_28(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_28(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(27, xla); }
  }

  static private boolean jj_2_29(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_29(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(28, xla); }
  }

  static private boolean jj_2_30(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_30(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(29, xla); }
  }

  static private boolean jj_2_31(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_31(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(30, xla); }
  }

  static private boolean jj_2_32(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_32(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(31, xla); }
  }

  static private boolean jj_2_33(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_33(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(32, xla); }
  }

  static private boolean jj_2_34(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_34(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(33, xla); }
  }

  static private boolean jj_2_35(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_35(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(34, xla); }
  }

  static private boolean jj_2_36(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_36(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(35, xla); }
  }

  static private boolean jj_2_37(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_37(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(36, xla); }
  }

  static private boolean jj_2_38(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_38(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(37, xla); }
  }

  static private boolean jj_2_39(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_39(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(38, xla); }
  }

  static private boolean jj_2_40(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_40(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(39, xla); }
  }

  static private boolean jj_2_41(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_41(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(40, xla); }
  }

  static private boolean jj_2_42(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_42(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(41, xla); }
  }

  static private boolean jj_2_43(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_43(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(42, xla); }
  }

  static private boolean jj_2_44(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_44(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(43, xla); }
  }

  static private boolean jj_2_45(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_45(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(44, xla); }
  }

  static private boolean jj_2_46(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_46(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(45, xla); }
  }

  static private boolean jj_2_47(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_47(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(46, xla); }
  }

  static private boolean jj_2_48(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_48(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(47, xla); }
  }

  static private boolean jj_2_49(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_49(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(48, xla); }
  }

  static private boolean jj_3_33() {
    if (jj_scan_token(LESS_EQUAL)) return true;
    return false;
  }

  static private boolean jj_3_29() {
    if (jj_scan_token(23)) return true;
    if (jj_3R_11()) return true;
    return false;
  }

  static private boolean jj_3_44() {
    if (jj_3R_13()) return true;
    return false;
  }

  static private boolean jj_3_28() {
    if (jj_scan_token(22)) return true;
    if (jj_scan_token(L_PAREN)) return true;
    return false;
  }

  static private boolean jj_3R_14() {
    if (jj_scan_token(20)) return true;
    if (jj_scan_token(L_PAREN)) return true;
    return false;
  }

  static private boolean jj_3_20() {
    if (jj_3R_10()) return true;
    if (jj_scan_token(NAME)) return true;
    return false;
  }

  static private boolean jj_3_49() {
    if (jj_scan_token(8)) return true;
    return false;
  }

  static private boolean jj_3_48() {
    if (jj_scan_token(7)) return true;
    return false;
  }

  static private boolean jj_3_38() {
    if (jj_scan_token(MINUS)) return true;
    return false;
  }

  static private boolean jj_3_27() {
    if (jj_scan_token(18)) return true;
    return false;
  }

  static private boolean jj_3_26() {
    if (jj_scan_token(17)) return true;
    return false;
  }

  static private boolean jj_3_25() {
    if (jj_scan_token(16)) return true;
    return false;
  }

  static private boolean jj_3_32() {
    if (jj_scan_token(GREATER)) return true;
    return false;
  }

  static private boolean jj_3_24() {
    if (jj_scan_token(15)) return true;
    return false;
  }

  static private boolean jj_3_43() {
    if (jj_3R_8()) return true;
    return false;
  }

  static private boolean jj_3_10() {
    if (jj_3R_9()) return true;
    return false;
  }

  static private boolean jj_3_23() {
    if (jj_scan_token(14)) return true;
    return false;
  }

  static private boolean jj_3R_10() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_22()) {
    jj_scanpos = xsp;
    if (jj_3_23()) {
    jj_scanpos = xsp;
    if (jj_3_24()) {
    jj_scanpos = xsp;
    if (jj_3_25()) {
    jj_scanpos = xsp;
    if (jj_3_26()) {
    jj_scanpos = xsp;
    if (jj_3_27()) return true;
    }
    }
    }
    }
    }
    return false;
  }

  static private boolean jj_3_22() {
    if (jj_scan_token(13)) return true;
    return false;
  }

  static private boolean jj_3_5() {
    if (jj_scan_token(8)) return true;
    return false;
  }

  static private boolean jj_3_3() {
    if (jj_scan_token(8)) return true;
    return false;
  }

  static private boolean jj_3_4() {
    if (jj_scan_token(7)) return true;
    return false;
  }

  static private boolean jj_3_2() {
    if (jj_scan_token(7)) return true;
    return false;
  }

  static private boolean jj_3_47() {
    if (jj_3R_16()) return true;
    return false;
  }

  static private boolean jj_3R_9() {
    if (jj_3R_10()) return true;
    if (jj_scan_token(NAME)) return true;
    return false;
  }

  static private boolean jj_3_35() {
    if (jj_scan_token(NOT_EQUAL)) return true;
    return false;
  }

  static private boolean jj_3_17() {
    if (jj_scan_token(64)) return true;
    if (jj_scan_token(NAME)) return true;
    return false;
  }

  static private boolean jj_3_19() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_17()) {
    jj_scanpos = xsp;
    if (jj_3_18()) return true;
    }
    return false;
  }

  static private boolean jj_3_37() {
    if (jj_scan_token(MULT)) return true;
    return false;
  }

  static private boolean jj_3R_8() {
    if (jj_3R_10()) return true;
    if (jj_scan_token(64)) return true;
    return false;
  }

  static private boolean jj_3_15() {
    if (jj_scan_token(8)) return true;
    return false;
  }

  static private boolean jj_3_18() {
    if (jj_scan_token(10)) return true;
    return false;
  }

  static private boolean jj_3_31() {
    if (jj_scan_token(LESS)) return true;
    return false;
  }

  static private boolean jj_3R_16() {
    if (jj_scan_token(NAME)) return true;
    if (jj_scan_token(28)) return true;
    return false;
  }

  static private boolean jj_3_9() {
    if (jj_3R_8()) return true;
    return false;
  }

  static private boolean jj_3_8() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_9()) {
    jj_scanpos = xsp;
    if (jj_3_10()) return true;
    }
    return false;
  }

  static private boolean jj_3_16() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_14()) {
    jj_scanpos = xsp;
    if (jj_3_15()) return true;
    }
    return false;
  }

  static private boolean jj_3_14() {
    if (jj_scan_token(7)) return true;
    return false;
  }

  static private boolean jj_3_46() {
    if (jj_3R_15()) return true;
    return false;
  }

  static private boolean jj_3_7() {
    if (jj_scan_token(LESS)) return true;
    if (jj_scan_token(NAME)) return true;
    return false;
  }

  static private boolean jj_3R_12() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_43()) {
    jj_scanpos = xsp;
    if (jj_3_44()) {
    jj_scanpos = xsp;
    if (jj_3_45()) {
    jj_scanpos = xsp;
    if (jj_3_46()) {
    jj_scanpos = xsp;
    if (jj_3_47()) return true;
    }
    }
    }
    }
    return false;
  }

  static private boolean jj_3R_7() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_6()) {
    jj_scanpos = xsp;
    if (jj_3_7()) return true;
    }
    return false;
  }

  static private boolean jj_3_41() {
    if (jj_3R_12()) return true;
    return false;
  }

  static private boolean jj_3_6() {
    if (jj_scan_token(63)) return true;
    if (jj_scan_token(NAME)) return true;
    return false;
  }

  static private boolean jj_3R_17() {
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3_41()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  static private boolean jj_3_13() {
    if (jj_3R_9()) return true;
    return false;
  }

  static private boolean jj_3_40() {
    if (jj_scan_token(65)) return true;
    return false;
  }

  static private boolean jj_3R_11() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_42()) {
    jj_scanpos = xsp;
    if (jj_3R_17()) return true;
    }
    return false;
  }
